# mavlink-server

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  README.md  build.rs  cross_build_and_install.sh
.config/: nextest.toml
.github/: sccache-summary.sh
.github/cross/: Dockerfile.aarch64-unknown-linux-musl-sccache  Dockerfile.arm-unknown-linux-musleabihf-sccache  Dockerfile.armv7-unknown-linux-musleabihf-sccache  Dockerfile.x86_64-unknown-linux-musl-sccache  cargo-with-stats.sh  pre-build-sccache.sh  report-sccache-stats.sh  sccache-prebuilt.sh
.github/workflows/: arm_vehicle.yml  build.yml  test_endpoints.yml
benches/: callbacks_bench.rs
src/: build.rs  cli.rs  drivers.rs  hub.rs  logger.rs  main.rs  mavlink.bak.rs  protocol.rs  sinks.rs  sources.rs
src/drivers/: fake.rs  mod.rs
src/drivers/file/: client.rs  server.rs
src/drivers/rest/: data.rs  mod.rs
src/drivers/serial/: mod.rs
src/drivers/tcp/: client.rs  mod.rs  server.rs
src/drivers/tlog/: reader.rs  writer.rs
src/drivers/udp/: client.rs  server.rs
src/hub/: actor.rs  mod.rs  protocol.rs
src/lib/: callbacks.rs  cli.rs  logger.rs  mavlink_json.rs  mod.rs  protocol.rs  zenoh_service.rs
src/lib/drivers/: fake.rs  generic_tasks.rs  mod.rs
src/lib/drivers/rest/: control.rs  data.rs  mod.rs
src/lib/drivers/rest/autopilot/: arducopter.rs  ardupilot.rs  arduplane.rs  ardurover.rs  ardusub.rs  mod.rs
src/lib/drivers/rest/autopilot/parameters/: mod.rs
src/lib/drivers/rest/mavftp/: client.rs  mod.rs  protocol.rs  transport.rs
src/lib/drivers/rest/vehicle_logs/: client.rs  mod.rs  protocol.rs  transport.rs
src/lib/drivers/serial/: mod.rs
src/lib/drivers/tcp/: client.rs  mod.rs  server.rs
src/lib/drivers/tlog/: reader.rs  writer.rs
src/lib/drivers/udp/: client.rs  mod.rs  server.rs
src/lib/drivers/websocket/: client.rs  client_adapter.rs  mod.rs  server.rs  server_adapter.rs
src/lib/drivers/zenoh/: json.rs  mod.rs  raw.rs  raw_adapter.rs  session.rs
src/lib/hub/: actor.rs  mod.rs  protocol.rs
src/lib/stats/: actor.rs  mod.rs  protocol.rs  resources.rs
src/lib/stats/accumulated/: driver.rs  messages.rs  mod.rs
src/lib/web/: endpoints.rs  mavlink_endpoints.rs  mod.rs
src/lib/web/routes/: mod.rs
src/lib/web/routes/v1/: info.rs  log.rs  mavftp.rs  mod.rs  stats.rs  vehicle_logs.rs
src/lib/web/routes/v1/rest/: mavlink.rs  mod.rs  vehicles.rs  websocket.rs
src/stats/: actor.rs  driver.rs  messages.rs  mod.rs  protocol.rs
src/stats/accumulated/: driver.rs  messages.rs  mod.rs
src/web/: endpoints.rs  mod.rs
src/web/html/: index.html
src/webpage/: Cargo.toml  index.html
src/webpage/.cargo/: config.toml
src/webpage/assets/: manifest.json  sw.js
src/webpage/src/: app.rs  components_names.rs  lib.rs  main.rs  messages.rs  messages_names.rs
src/webpage/src/stats/: drivers_stats.rs  hub_messages_stats.rs  hub_stats.rs  mod.rs  resources.rs  stats_frequency.rs
src/webpage/src/tabs/: control.rs  helper.rs  mavftp.rs  mod.rs  vehicle_logs.rs
src/webpage/src/widgets/: driver_stats.rs  hub_stats.rs  message_inspector.rs  message_stats.rs  mod.rs
tests/: tcp.rs  udp.rs  websocket.rs  zenoh.rs
tests/common/: mod.rs
tests/files/: 00025-2024-04-22_18-49-07.tlog
tests/python/: .gitignore  control.py  main.py  pyproject.toml  server.py  sitl.py  utils.py
tests/scripts/: pyproject.toml  test_heartbeat.py
tests/zenoh/: json.rs  mod.rs  raw.rs
