[package]
name = "mavlink-server"
version = "0.1.0"
edition = "2021"
authors = ["João Antônio Cardoso <joao.maker@gmail.com>", "Patrick José Pereira <patrickelectric@gmail.com>"]
build = "build.rs"

[lib]
name = "mavlink_server"
path = "src/lib/mod.rs"
bench = false

[[bench]]
name = "callbacks_bench"
harness = false

[[bin]]
name = "mavlink-server"
path = "src/main.rs"
bench = false

[dependencies]
anyhow = "1"
arc-swap = "1.7"
async-trait = "0.1.81"
axum = { version = "0.8.4", features = ["ws"] }
bytes = { version = "1.7", features = ["serde"] }
byteorder = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
include_dir = { git = "https://github.com/patrickelectric/include_dir", branch = "fixes" }
indexmap = { version = "2.5.0", features = ["serde"] }
json5 = "0.4.1"
lazy_static = "1.5.0"
mavlink = { default-features = false, features = ["std", "ardupilotmega", "serde", "tokio-1"], git = "https://github.com/mavlink/rust-mavlink", hash = "5f2ecbe8" }
mavlink-codec = { git = "https://github.com/bluerobotics/rust-mavlink-codec", branch = "master" }
regex = "1.10.6"
serde = { version = "1", features = ["rc"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
shellexpand = "3.1"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7", features = [ "codec", "net" ] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["normalize-path", "trace", "cors"] }
once_cell = "1.21"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1", features = ["v5", "v4", "serde"] }
mime_guess = "2.0.5"

tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"
# This is a custom revision adding file name suffix on top of tracing-appender-0.2.2" "0.2.2", but compatible with the current tracing version.
# Reference: https://github.com/tokio-rs/tracing/issues/2441
tracing-appender = { git = "https://github.com/joaoantoniocardoso/tracing", branch = "tracing-appender-0.2.2-with-filename-suffix" }
toml = "0.8.19"
zenoh = "1.3.4"
ringbuffer = "0.15.0"
strum = "0.27"
strum_macros = "0.27"
bitflags = { version = "2.9.0", features = ["serde"] }
semver = { version = "1.0.26", features = ["serde"] }
cached = "0.55.1"
sysinfo = "0.35.0"

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
vergen-gix = { version = "1.0.2", default-features = false, features = ["build", "cargo"] }

[profile.profiling]
inherits = "release"
debug = 1
jemalloc = false
