[package]
name = "mavlink-server-frontend"
version = "0.1.0"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-unknown-unknown"]

[dependencies]
bytesize = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
dateparser = "0.2.1"
egui = "0.27"
egui_dock = { version = "0.12", features = ["serde"] }
egui_extras = { version = "0.27", features = ["chrono"] }
egui_plot = "0.29.0"
egui-modal = "0.3.6"
ewebsock = "0.6.0"
humantime = "2.1.0"
log = "0.4"
rfd = "0.14"
# Help with persistent data
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
tokio_with_wasm = "0.7.1"
url = "2.5.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = ["Window", "Location"] }

eframe = { version = "0.29", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
