[package]
name = "mavlink-server-frontend"
version = "0.1.0"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-unknown-unknown"]

[dependencies]
bytesize = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
dateparser = "0.2.1"
egui = "0.29"
egui_dock = { version = "0.14", features = ["serde"] }
egui_extras = { version = "0.29", features = ["chrono", "serde"] }
egui_plot = "0.29.0"
egui-modal = "0.5.0"
ehttp = { version = "0.5", features = ["json"] }
ewebsock = "0.7.0"
humantime = "2.1.0"
log = "0.4"
rfd = "0.15"
# Help with persistent data
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
tokio_with_wasm = "0.7.2"
url = "2.5.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location"] }
indexmap = { version = "2.6.0", features = [ "serde" ]}
ringbuffer = "0.15.0"
uuid = { version = "1", default-features = false, features = ["v5", "v4", "serde", "js"] }

eframe = { version = "0.29", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
