[package]
name = "mavlink-server-frontend"
version = "0.1.0"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-unknown-unknown"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dateparser = "0.2.1"
egui = "0.31.1"
egui_autocomplete = { git = "https://github.com/Yatekii/egui_autocomplete", branch = "task/bump-version", features = ["serde"] }
egui_dock = { version = "0.16", features = ["serde"] }
egui_extras = { version = "0.31.1", features = ["chrono", "serde", "syntect"] }
egui_plot = "0.31.0"
egui-modal = "0.6.0"
ehttp = { version = "0.5", features = ["json"] }
ewebsock = "0.8.0"
humantime = "2.1.0"
log = "0.4"
rfd = "0.15"
# Help with persistent data
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tokio_with_wasm = "0.8.2"
url = "2.5.4"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location"] }
indexmap = { version = "2.8.0", features = [ "serde" ]}
ringbuffer = "0.15.0"
uuid = { version = "1", default-features = false, features = ["v5", "v4", "serde", "js"] }

eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
